# spetools

./: .cirrus.yml  CMakeLists.txt  LICENSE
.github/workflows/: cmake.yml  codeql-analysis.yml  msvc-analysis.yml
decode/: CMakeLists.txt  spe_decode.c
fuzz/: CMakeLists.txt  spe_fuzz.cc
lib/: CMakeLists.txt  context.c  packet.c  packet_decode.c  spedecode.h  spedecode_internal.h
